kubernetes/matrix-addons/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1 
metadata:
  name: matrix
  namespace: operations
spec:
  rules:
    # Main Synapse rule
    - host: matrix.eniworks.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: matrix-synapse
              port: 
                number: 80
    # Riot rule
    #- host: element.eniworks.net
    #  http:
    #    paths:
    #    - path: /
    #      pathType: Prefix
    #      backend:
    #        service:
    #          name: matrix-riot
    #          port: 
    #            number: 80
    # Federation rule
    - host: matrix-fed.eniworks.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: matrix-synapse-federation
              port: 
                number: 80
